    * [OPENJPA-812] - slices: aggregate queries fail if any slice has empty results
    * [OPENJPA-821] - slices: DistributedStoreQuery$UpdateExecutor calls executeDelete by mistake
    * [OPENJPA-824] - org.apache.openjpa.lib.util.ParseException when try to get property descriptor for property: CacheMarshallers
    * [OPENJPA-825] - slices: hangs with multithreaded true
    * [OPENJPA-828] - Externalizer fails with ClassCastException with runtime enhancement
    * [OPENJPA-845] - Ordering across slice fails when ordering terms are not included in projection items
    * [OPENJPA-886] - Certain query failing after svn:739123
    * [OPENJPA-955] - MethodQL parameter passing broken
    * [OPENJPA-1039] - Dynamic query predicates must not treat AND OR operators as associative

Improvement
-----------
    * [OPENJPA-703] - Cache ResultObjectProvider data to improve query performance
    * [OPENJPA-841] - Create structures to hold Slice information with StateManangers
    * [OPENJPA-858] - Allow postPersist be invoked immediately after persist()
    * [OPENJPA-968] - Change in default detach() behavior for JPA 2.0

New Feature
-----------
    * [OPENJPA-800] - OpenJPA 2.0 iteration 1 primary task 
    * [OPENJPA-807] - OpenJPA 2.0 iteration 2 primary task
    * [OPENJPA-831] - OpenJPA 2.0 iteration 1.5 (holiday) primary task
    * [OPENJPA-966] - Support Replication-enabled MySQL  
    * [OPENJPA-1008] - Generate meta-model for JPA 2.0
    * [OPENJPA-1009] - Populate canonical meta-model for strictly typed Criteria Query building
    * [OPENJPA-1010] - Instantiate meta-model classes for JPA 2.0 from source code annotations
    * [OPENJPA-1011] - Instantiate meta-model classes for JPA 2.0 from XML descriptors
    * [OPENJPA-1014] - Build weakly-typed Criteria API

Task
----
    * [OPENJPA-995] - Migrate existing Criteria Query implementation as OpenJPA extension to prepare for upcoming JPA 2.0 spec changes
