@@ -1028,6 +1028,11 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-995'>OPENJPA-995</a>] - Migrate existing Criteria Query implementation as OpenJPA extension to prepare for upcoming JPA 2.0 spec changes</li>
 </ul>
 
+<h4>Test</h4>
+<ul>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-766'>OPENJPA-766</a>] - Tests that currently fail should be committed to the repository</li>
+</ul>
+
 <BR>
 <hr>
 <h2><a name="Previous"></a>Previous Releases</h2>
